<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SpeakGPT Lite</string>
    <string name="app_name_lite" translatable="false">SpeakGPT Lite</string>
    <string name="avatar_gpt" translatable="false">GPT</string>
    <string name="avatar_gemini" translatable="false">Gemini</string>
    <string name="avatar_perplexity_ai" translatable="false">Perplexity AI</string>
    <string name="activation_prompt_set_message">Tap to set activation prompt</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_prompts">Prompts</string>
    <string name="menu_tips">Tips</string>
    <string name="about_developer">Developer: AndraxDev</string>
    <string name="about_version">"Version: "</string>
    <string name="about_view_other_projects">View other projects</string>
    <string name="about_send_feedback">Send feedback</string>
    <string name="about_terms">Terms</string>
    <string name="activation_begin">Let\'s begin</string>
    <string name="activation_desc2">API usage is significantly cheaper than fixed subscription. API-key authentication is safer than username/password authentication and API access allow you to use different API providers. App can access only API but not account info. You can revoke API key anytime without losing your account. API key is encrypted and stored only on your device.</string>
    <string name="activation_openai_api_key">API key</string>
    <string name="activation_warning">Enter the key only if you downloaded this app from official Store or Github page or compiled from sources. We are not responsible for apps from third-party sources. Builds from third-party sources may be insecure.</string>
    <string name="btn_send">Send</string>
    <string name="hint_message">Message</string>
    <string name="btn_speak">Speak</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_export_chat">Export chat</string>
    <string name="btn_export_image">Export image</string>
    <string name="title_report_abuse">Report abuse</string>
    <string name="report_desc">This prompt contains:</string>
    <string name="illegal_activity">Illegal activity</string>
    <string name="child_sexual_abuse">Child Sexual Abuse</string>
    <string name="generation_of_hateful_harassing_or_violent_content">Generation of hateful, harassing, or violent content</string>
    <string name="generation_of_malware">Generation of malware</string>
    <string name="fraudulent_or_deceptive_activity">Fraudulent or deceptive activity</string>
    <string name="adult_content">Adult content</string>
    <string name="political_campaigning_or_lobbying">Political campaigning or lobbying</string>
    <string name="duplicated_prompt_or_spam">Duplicated prompt or spam</string>
    <string name="hint_additional_info">Additional info</string>
    <string name="btn_send_report">Send report</string>
    <string name="report_warning">Note: Sending multiple identical reports will not solve your problem faster.</string>
    <string name="settings">Settings</string>
    <string name="restart_warning">Requires app to be restarted</string>
    <string name="setting_change_openai_api_key">Change API key</string>
    <string name="setting_manage_account_desc">Tap to manage your API account</string>
    <string name="setting_account">Account</string>
    <string name="setting_default_desc">Make SpeakGPT your default assistant</string>
    <string name="setting_default">Assistant settings</string>
    <string name="setting_lang_desc">Set a language for voice output</string>
    <string name="setting_lang">Assistant language</string>
    <string name="setting_resolution_desc">Resolution of generated images</string>
    <string name="setting_resolution_note">Note: All images are squared. Higher resolution is more expensive and it loads slower. You can see prices on the official OpenAI page. Average price is $0.018/image.</string>
    <string name="setting_voice">Speech recognition system</string>
    <string name="setting_voice_note">Note: Some ROMs may not support speech recognition by Google. Whisper API is a paid API by OpenAI that requires Internet.</string>
    <string name="setting_model">AI model</string>
    <string name="setting_advanced_desc">Tap to access advanced settings</string>
    <string name="setting_advanced">Advanced settings</string>
    <string name="setting_act_prompt">Activation prompt</string>
    <string name="setting_layout">Chat layout</string>
    <string name="layout_classic">Classic</string>
    <string name="layout_bubbles">Bubbles</string>
    <string name="setting_silent">Silent mode</string>
    <string name="setting_silent_desc">Do not pronounce bot answers</string>
    <string name="setting_about_desc">Tap to see app and developer info</string>
    <string name="setting_about">About app</string>
    <string name="setting_clear_chat">Clear chat history</string>
    <string name="title_terms">Terms</string>
    <string name="terms_desc1">This is the example how to use different LLMs including OpenAI ChatGPT, Facebook LLama. We (developer) are not affiliated with OpenAI or other API providers. All logos and materials are property of respective companies.</string>
    <string name="btn_next">Next</string>
    <string name="terms_desc2">We are not responsible for assistant output. As an AI language model SpeakGPT may occasionally provide incorrect, irrelevant or offensive information.</string>
    <string name="terms_desc3">Your chat history is saved locally but you can turn on Teslasoft ID sync. In this case your chat history will be saved on our servers for backup purposes. No data is transferred to third-party companies.</string>
    <string name="prompt_tip">Pro tip: You can edit prompt before trying it.</string>
    <string name="btn_flag">Flag as inappropriate</string>
    <string name="welcome_to_speakgpt">Welcome to SpeakGPT</string>
    <string name="app_desc">SpeakGPT is an advanced and highly intuitive voice assistant that utilizes the powerful LLMs to provide you with unparalleled performance and functionality.</string>
    <string name="btn_get_started">Get started</string>
    <string name="title_act_prompt">Activation prompt</string>
    <string name="hint_act_prompt">I want you act as...</string>
    <string name="act_prompt_desc">Note: This prompt will be sent on the start of each conversation. Please note that this feature may use additional tokens. Leave this blank empty to disable this feature. If it is not work just clear your chat history.</string>
    <string name="title_new_chat">New chat</string>
    <string name="hint_chat_name">Chat name</string>
    <string name="title_advanced_settings">Advanced settings</string>
    <string name="select_ai_model">Select AI model</string>
    <string name="custom_fine_tuned_model"> Custom fine-tuned model</string>
    <string name="max_tokens_desc">WARNING: We recommend to set max_tokens parameter for classifiers to avoid useless usage. Lower value will make generating process faster but may cut off output.</string>
    <string name="hint_max_tokens">Max tokens</string>
    <string name="end_separator_desc">Some models work best if end separator is set. We recommend using \"\\n\\n###\\n\\n\" separator. It may depend on training dataset. For more info refer model\'s documentation or (if possible) inspect training data.</string>
    <string name="hint_prefix">Prefix</string>
    <string name="hint_end_separator">End separator</string>
    <string name="btn_show_keyboard">Show keyboard</string>
    <string name="btn_hide_keyboard">Hide keyboard</string>
    <string name="btn_save">Save</string>
    <string name="btn_new_chat">New chat</string>
    <string name="btn_import_chat">Import chat</string>
    <string name="title_network_error">Network error</string>
    <string name="network_error_desc">Something is wrong in your connection. Our servers might be unavailable or you don\'t have Internet connection.</string>
    <string name="btn_try_again">Try again</string>
    <string name="title_post_a_prompt">Post a prompt</string>
    <string name="hint_name">Your name</string>
    <string name="hint_prompt_title">Prompt title</string>
    <string name="hint_prompt_desc">Brief description</string>
    <string name="hint_prompt">Prompt</string>
    <string name="prompt_for">AI Model</string>
    <string name="category">Category</string>
    <string name="cat_development">Development</string>
    <string name="cat_music">Music</string>
    <string name="cat_art">Art</string>
    <string name="cat_culture">Culture</string>
    <string name="cat_business">Business</string>
    <string name="cat_gaming">Gaming</string>
    <string name="cat_education">Education</string>
    <string name="cat_history">History</string>
    <string name="cat_health">Health</string>
    <string name="cat_food">Food</string>
    <string name="cat_tourism">Tourism</string>
    <string name="cat_productivity">Productivity</string>
    <string name="cat_tools">Tools</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="safety_warning">Follow OpenAI safety principles. Do not post any inappropriate or sensitive information. All prompts are being moderated. Inappropriate prompts will be removed without further notice.</string>
    <string name="btn_post_your_prompt">Post your prompt</string>
    <string name="title_prompts_store">Prompts library</string>
    <string name="hint_search">Search</string>
    <string name="title_select_language">Select language</string>
    <string name="title_tips">Tips</string>
    <string name="tip1">Start your message with \"Create an image\", \"Create a photo\" or \"/imagine\" to generate images.</string>
    <string name="tip2">Long press chat name to edit or delete it.</string>
    <string name="ds_no_collect">Data we DO NOT collect</string>
    <string name="ds_chats_list">• Chats list</string>
    <string name="ds_conversation_contents">• Conversation contents</string>
    <string name="ds_audio_samples_of_your_voice">• Audio samples of your voice</string>
    <string name="ds_api_keys">• API keys</string>
    <string name="ds_optional_collect">Optional data we may collect</string>
    <string name="ds_require_collection">Required data we collect</string>
    <string name="data_safety">Data safety</string>
    <string name="btn_ds_decline">Decline and exit</string>
    <string name="btn_ds_accept">Accept</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="ds_warning">Even if you decompile the app and remove this screen we may still collect this data. By using this app, you are agree with our Privacy Policy and Terms of Service.</string>
    <string name="ds_lite_description">This page describes which data we use and why. Collecting data means saving data on our server for further processing.</string>
    <string name="ds_lite_dont_collect_explanation">SpeakGPT does not collect these info, but depending on API provider used (like OpenAI, OpenRouter, etc) some of these data may be saved by these providers. When you chat with SpeakGPT, we transfer your conversation directly to API provider and do not save it on our servers. All data saved locally is secured with a military-grade encryption (AES-256-GCM). Please review Privacy Policy of API provider you are using to learn more about how your data is processed.</string>
    <string name="ds_lite_optional_collect_explanation">No data is collected in SpeakGPT Lite because it is focused on user privacy. No online services is available in this version. App is built using open-source libraries with free licenses only. All proprietary libraries has been removed from this version.</string>
    <string name="ds_lite_required_collect_explanation">No required data is collected because all online services and proprietary libraries were removed from the app.</string>
</resources>